--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<GridView
+<ListView
+    android:id="@+id/home_lv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></GridView>
+    android:layout_height="match_parent"></ListView>
 </LinearLayout>
