--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -2,8 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
-    android:text="项目页面"
+    <FrameLayout
+        android:id="@+id/fl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></FrameLayout>
+<Button
+    android:id="@+id/btn_vp"
+    android:text="viewpager"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
 </LinearLayout>
